# Teste-PicPay-FastAPI

./: app.py  pyproject.toml
src/: server.py
src/database/: db.py
src/models/transaction/: transaction.py
src/models/user/: user.py
src/repositories/: user.py
src/schemas/: notification.py  transaction.py  user.py
src/services/: notification.py  transaction.py  user.py
src/utils/: error.py
test/: conftest.py  test_simple.py  test_version.py
