[tool.poetry]
name = "teste-picpay"
version = "0.1.0"
description = "Teste do PicPay BackEnd"
authors = ["tuliomitico <tulioneedforspeed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "~1.4"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "~6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
